test/lattests/extensions/var/bad/varInNewArr.lat
class box {
    int x;
}

void foo(box[] x) { }

int main() {
    box[] x = new var[];
    foo(x);
    return 0;
}